--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,18 @@
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.10",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@babel/eslint-parser": "^7.22.10",
     "eslint": "^8.47.0",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
