--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0"
   },
