Some modification & implemented auth part

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,1 @@
-MONGODB_URI='mongodb+srv://username:password@aslan.im1wsjq.mongodb.net/BarberShop'
+MONGODB_URI=mongodb+srv://ali:ali@aslan.im1wsjq.mongodb.net/BarberShop
