--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,15 @@
     "url": "git+https://gitlab.com/dit342/group-00-web.git"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
