--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
