--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.5.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vue2-simple-calendar": "^1.0.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.10",
