--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.7.1",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
+    "vue-fullcalendar": "^1.0.9",
     "vue-router": "^3.5.2",
     "vue2-simple-calendar": "^1.0.8"
   },
