--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "jquery": "^3.7.1",
     "v-calendar": "^2.4.1",
+    "v-calendar-scheduler": "^0.7.4",
     "vue": "^2.6.14",
     "vue-fullcalendar": "^1.0.9",
     "vue-router": "^3.5.2",
