--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.14",
     "vue-fullcalendar": "^1.0.9",
     "vue-router": "^3.5.2",
-    "vue2-simple-calendar": "^1.0.8"
+    "vue2-simple-calendar": "^1.0.8",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.10",
