--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "postinstall": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
-    "npm": "9.x",
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "10.4.0"
   },
   "devDependencies": {
-    "@vue/cli": "^5.0.8"
+    "@vue/cli": "^4.5.0"
   }
 }
